welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but '{' found.
if {Buggle2 est FaceMur} avance(); 
   ^Program:2: error: illegal start of simple expression
if {Buggle2 est FaceMur} avance(); 
                                 ^