welcome.lessons.welcome.conditions.Conditions.scala.code
if {Buggle2 est FaceMur} avance();